<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="#EEEFEE"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_fingerprint" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/finger_verify_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/pleasevefiryyourfinger" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#e5e5e5" />

        <LinearLayout
            android:background="#EEEFEE"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:background="#EEEFEE"
                android:layout_weight="1"
                android:id="@+id/cancel_finger_verify_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="18sp" />

            <TextView
                android:background="#EEEFEE"
                android:visibility="gone"
                android:id="@+id/pass_verify_btn"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/password_vefiry"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>